--- a/src/Component/WorkHome.css
+++ b/src/Component/WorkHome.css
@@ -48,7 +48,8 @@
     font-weight: bold;
     margin: 30px 0;
     color: teal;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'poppins';
+    /* 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 
 }
 .containercardtime{
